# jmap-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: calendar.rs  calendar_event.rs  calendarevent.rs  contact.rs  contact_group.rs  contactgroup.rs  jmap.rs  jmaputil.rs  lib.rs  macros.rs  mailbox.rs  message.rs  message_copy.rs  message_import.rs  message_list.rs  message_report.rs  method.rs  parse.rs  record.rs  types.rs  util.rs
